feat: add Phase18 FAOF-2 bounded proof foundation